generated/checkers/refine/KN-Null-Pointer-Dereference-3027e7b1-0/build_logs/syntax-repair-refine-0-1/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool functionKnownToDeref(const clang::ento::CallEvent&, llvm::SmallVectorImpl<unsigned int>&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:98:30: error: range-based ‘for’ expression of type ‘KnownDerefFunction []’ has incomplete type
   98 |     for (const auto &Entry : DerefTable) {
      |                              ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:339:6: warning: ‘static bool {anonymous}::SAGenTestChecker::isFalsePositiveContext(const clang::Stmt*)’ defined but not used [-Wunused-function]
  339 | bool SAGenTestChecker::isFalsePositiveContext(const Stmt *S) {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
